# irc_creative23

./: README.md
irc_creative23_master_oper/: CMakeLists.txt  mainpage.dox  package.xml
irc_creative23_master_oper/include/irc_creative23_master_oper/: main_window.hpp  qnode.hpp
irc_creative23_master_oper/launch/: irc_creative23_master_oper.launch
irc_creative23_master_oper/src/: main.cpp  main_window.cpp  qnode.cpp
irc_creative23_master_oper/ui/: main_window.ui
irc_creative23_master_robot/: CMakeLists.txt  mainpage.dox  package.xml
irc_creative23_master_robot/include/irc_creative23_master_robot/: main_window.hpp  qnode.hpp
irc_creative23_master_robot/src/: main.cpp  main_window.cpp  qnode.cpp
irc_creative23_master_robot/ui/: main_window.ui
kubo_joy/: CMakeLists.txt  package.xml
kubo_joy/include/kubo_joy/: kubo_joy.h
kubo_joy/launch/: kubo_joy.launch
kubo_joy/src/: kubo_joy.cpp
kubo_msgs/: CMakeLists.txt  README.md  package.xml
kubo_msgs/msg/: humo.msg  operator2robot.msg  robot2operator.msg
